# dataquery

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: general-pipeline.yml  release.yml
dataquery/utils/: logging.yaml
tests/: conftest.py  seed_data.json
tests/dataquery/: test_column.py  test_database.py  test_delete.py  test_insert.py  test_retrieval.py  test_table.py  test_update.py
