[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataquery"
version = "0.1.0"
description = "A package for simplified database operations with PostgreSQL and Pandas."
authors = [
    {name = "Praveen", email = "praveen.nitap@gmail.com"},
]
maintainers = [
    {name = "Praveen", email = "praveen.nitap@gmail.com"}
]
license = {text = "BSD 3-Clause License"}
keywords = ["database", "SQL", "PostgreSQL", "pandas"]
classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: DS Developers",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.4.0",
    "psycopg2-binary>=2.9.3",
    "sqlalchemy>=1.4.31",
]

[project.urls]
homepage = "https://github.com/praveen-uofg/dataquery"
documentation = "https://github.com/praveen-uofg/dataquery"
repository = "https://github.com/praveen-uofg/dataquery"

[tool.black]
line-length = 121
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dataquery"]
